--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-nft-gallery": "^0.4.0",
     "web3": "^1.3.6"
   },
